[package]
name = "rust-scheme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1.19.0"
phf = { version = "0.11.2", features = ["macros"] }
regex = { version = "1.10.3", default-features = false, features = [
    "perf",
    "std",
] }
thiserror = "1.0.57"

[build-dependencies]
phf = { version = "0.11.2", default-features = false }
phf_codegen = "0.11.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.91"

[dev-dependencies]
wasm-bindgen-test = "0.3.41"

[profile.release]
lto = true
opt-level = 's'
